# python-rag-04112025

./: README.md  pyproject.toml
data/: rozdzial01.json  rozdzial02.json  rozdzial03.json  rozdzial04.json  rozdzial05.json  rozdzial06.json  rozdzial07.json  rozdzial08.json  rozdzial09.json  rozdzial10.json  rozdzial11.json  rozdzial12.json
eval_dataset/: pytania.json  pytania_trudne.json
