[tool.poetry]
name = "advanced-rag"
version = "0.1.0"
description = ""
authors = [
    "Bartosz Mikulski <mail@mikulskibartosz.name>"
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
llama-index = "0.13.2"
llama-index-readers-web = "0.5.0"
llama-index-retrievers-bm25 = "0.6.3"
ipykernel = "6.30.1"
streamlit = "1.48.1"
scikit-learn = "1.7.1"
matplotlib = "3.10.5"
SQLAlchemy = "2.0.43"
fastmcp = "2.11.3"
llama-index-tools-mcp = "0.4.0"
mcp = "1.13.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

